--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
